# FILE_TEST

./: README.md
Project/: CHANGELOG.md  partitions.csv  sdkconfig  sdkconfig.old
Project/components/espressif_esp_lcd_st7789/: CMakeLists.txt  esp_lcd_st7789.c
Project/components/espressif_esp_lcd_st7789/include/: esp_lcd_st7789.h
Project/components/espressif_esp_lcd_st7789/test_apps/: CMakeLists.txt
Project/components/espressif_esp_lcd_st7789/test_apps/main/: CMakeLists.txt  test_esp_lcd_st7789.c
Project/components/letter_shell_V2.x/: CMakeLists.txt  README.md  letter_shell.c  letter_shell.h  shell_cfg.h  shell_ext.c  shell_ext.h
Project/components/multi_button/: CMakeLists.txt  multi_button.c  multi_button.h
Project/components/未使用/espressif__esp_lcd_gc9a01/: CMakeLists.txt
Project/components/未使用/espressif__esp_lcd_ili9341/: CMakeLists.txt  esp_lcd_ili9341.c
Project/components/未使用/espressif__esp_lcd_touch/: CMakeLists.txt  idf_component.yml
Project/components/未使用/espressif__esp_lcd_touch_stmpe610/: CMakeLists.txt
Project/main/: CMakeLists.txt  Kconfig.projbuild  company.h  main.c  main.h  user_HUSB238A.c  user_HUSB238A.h  user_IP2730.c  user_IP2730.h  user_SW3516.c  user_SW3516.h  user_SW3536.c  user_SW3536.h  user_SW3566.c  user_SW3566.h  user_adc.c  user_adc.h  user_button.c  user_button.h  user_gui.c  user_gui.h  user_i2c.c  user_i2c.h  user_icons.c  user_letter_shell.c  user_letter_shell.h  user_lvgl.c  user_lvgl.h  user_new_source.c  user_new_source.h  user_oper_data.c  user_oper_data.h  user_source.c  user_source.h  user_uart.c  user_uart.h
(+11 files in other folders)
